--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <body>
-    <div data-include-path="dist/js/footer.html"></div>
+    <div data-include-path="dist/js/index.html"></div>
 
     <script>
 
